--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,33 @@
 <body>
   <header></header>
   <main>
-    <h1>Hello Sandbox</h1>
+    <div class="card">
+      <h1 class="title">Register With Us</h1>
+      <div class="form-area">
+        <form action="">
+          <div class="form-group">
+            <label class="form-label" for="name">Username</label>
+            <input class="form-input" id="name" type="text" placeholder="Enter username" required>
+          </div>
+          <div class="form-group">
+            <label class="form-label" for="email">Email</label>
+            <input class="form-input" id="email" type="email" placeholder="Enter email" required>
+          </div>
+          <div class="form-group">
+            <label class="form-label" for="password">Password</label>
+            <input class="form-input" id="password" type="password" placeholder="Enter password" required>
+          </div>
+          <div class="form-group">
+            <label class="form-label" for="password2">Confirm Password</label>
+            <input class="form-input" id="password2" type="password" placeholder="Enter password again" required>
+          </div>
+          <div class="form-group">
+            <button class="form-btn" type="submit">Submit</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
   </main>
 </body>
 </html>
