:sparkles: Function to catch the submit event
Retrieving a form using getElementById.
Define the submit event to be fired by the retrieved form

[Reference URL]
https://developer.mozilla.org/ja/docs/Web/Events
https://developer.mozilla.org/ja/docs/Web/API/Document/getElementById

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="card">
       <h1 class="title">Register With Us</h1>
       <div class="form-area">
-        <form action="">
+        <form id="form" action="">
           <div class="form-group">
             <label class="form-label" for="name">Username</label>
             <input class="form-input" id="name" type="text" placeholder="Enter username" required>
