:sparkles: HTML Markup done!!
I did the necessary markup to create the page.

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,103 @@
 </head>
 <body>
   <header></header>
-  <main>
-    <h1>Hello Sandbox</h1>
+  <main class="content-area">
+    <div class="pick-area">
+      <label for="moves" class="pick-label">Pick a movie:</label>
+      <select name="moves" id="moves">
+        <option value="10">Avengers: Endgame ($10)</option>
+        <option value="12">Joker ($12)</option>
+        <option value="8">Toy Story 4 ($8)</option>
+        <option value="9">The Lion King ($9)</option>
+      </select>
+    </div>
+    <div class="seat-list-area">
+      <ul class="seat-list">
+        <li class="seat-list-item">
+          <div class="seat"></div>
+          <p>N/A</p>
+        </li>
+        <li class="typeSeat-list-item">
+          <div class="seat selected"></div>
+          <p>Selected</p>
+        </li>
+        <li class="typeSeat-list-item">
+          <div class="seat occupied"></div>
+          <p>Occupied</p>
+        </li>
+      </ul>
+    </div>
+    <div class="screen-area">
+      <div class="screen"></div>
+    </div>
+    <div class="seat-area">
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      </div>
+    </div>
+    <div class="price-area">
+      <p class="price-message">
+        You have selected <span class="selected-seat-count">11</span> seats for a price of $<span class="total-price">88</span>
+      </p>
+    </div>
   </main>
 </body>
 </html>
