:sparkles: get seats, and click handler
Implementing the firing of events when a sheet is clicked.
Click to toggle Selected on and off.

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <div class="screen-area">
       <div class="screen"></div>
     </div>
-    <div class="seat-area">
+    <div id="seats" class="seat-area">
       <div class="seat-row">
         <div class="seat"></div>
         <div class="seat"></div>
