:sparkles: Function UpdateTextContent

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
     </div>
     <div class="price-area">
       <p class="price-message">
-        You have selected <span class="selected-seat-count">11</span> seats for a price of $<span class="total-price">88</span>
+        You have selected <span id="selected-seat-count" class="selected-seat-count">11</span> seats for a price of $<span id="total-price" class="total-price">88</span>
       </p>
     </div>
   </main>
